fix: misc fixes (#105)
* style: order of scss imports

* fix: prevent horizontal scrolling on member list

* fix: click inline file name triggers download

--- a/src/ui/chat/components/InlineFiles.scss
+++ b/src/ui/chat/components/InlineFiles.scss
@@ -147,16 +147,17 @@
       margin-right: $margin-small;
     }
 
+    .file-name-container {
+      display: flex;
+      margin-right: auto;
+    }
+
     .file-name {
       max-width: 100%;
       margin-right: 0;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-    }
-
-    .file-ext {
-      margin-right: auto;
     }
   }
 
